[package]
name = "microservice-converter"
version = "0.8.0"
edition = "2018"

[lib]
name = 'conversion_rates'
path = 'src/conversion_rates.rs'
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
actix-cors = "0.5.0"
serde = "1.0.130"
serde_json = "1.0.68"
strum_macros = "0.21.1"
curl = "0.4.38"
confy = "0.4.0"